--- a/Cad_Show/CppBasic/CppBasic/CppBasic.vcxproj.filters
+++ b/Cad_Show/CppBasic/CppBasic/CppBasic.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="SingleTon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3d.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileWork.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MathFunc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
